gearset/main/default/objects/AAObjWithPickList__c/AAObjWithPickList__c.object-meta.xml
<CustomObject>
    <label>AAObjWithPickList</label>
    <nameField>
        <label>AAObjWithPickList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AAObjWithPickListi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>