gearset/main/default/objects/AAObjWithPickList__c/fields/backupPickList__c.field-meta.xml
<CustomField>
        <fullName>backupPickList__c</fullName>
        <label>backupPickListLocal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>val1</fullName>
                </value>
                <value>
                    <fullName>val2</fullName>
                </value>
                <value>
                    <fullName>valN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>