gearset/main/default/objects/AAObjWithPickList__c/fields/GloablMulti__c.field-meta.xml
<CustomField>
        <fullName>GloablMulti__c</fullName>
        <label>GloablMulti</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalList2</valueSetName>
        </valueSet>
    </CustomField>