gearset/main/default/objects/AAObjWithPickList__c/fields/Multilist__c.field-meta.xml
<CustomField>
    <fullName>Multilist__c</fullName>
    <label>MultilistLocal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>multi1</fullName>
            </value>
            <value>
                <fullName>multi2</fullName>
            </value>
            <value>
                <fullName>multiN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>