gearset/main/default/objects/AAObjWithPickList__c/fields/ObjForStagingDelete__c.field-meta.xml
<CustomField>
        <fullName>ObjForStagingDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ObjForStagingDelete</label>
        <type>Checkbox</type>
    </CustomField>